--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "job-scheduler",
   "version": "0.0.1",
   "description": "Job Scheduler",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
