--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "job-scheduler",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Job Scheduler",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
