--- a/package.json
+++ b/package.json
@@ -17,10 +17,18 @@
   },
   "homepage": "https://github.com/YPSTechnology/job-scheduler#readme",
   "devDependencies": {
-    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-3": "^6.22.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
+  },
+  "dependencies": {
+    "babel-core": "^6.24.1",
+    "babel-polyfill": "^6.23.0"
   }
 }
